Add StaticResourcesProcessor